--- a/student/css/style.css
+++ b/student/css/style.css
@@ -44,6 +44,13 @@ html{
     font-size: 16px;
 }
 
+.edit input[type="email"]{
+    width: 250px;
+    height: 25px;
+    padding: 5px;
+    font-size: 16px;
+}
+
 .edit input[type="submit"] {
     width: 120px;
     height: 40px;
