--- a/student/css/style.css
+++ b/student/css/style.css
@@ -1,5 +1,8 @@
-html{
-    background-color: aquamarine;
+body{
+    background-image: url(../image/background.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .edit {
